// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`botChannelChoice defaults to false fallback 1`] = `
Object {
  "payload": Object {
    "fallback": false,
    "message": "world",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_CHANNEL_CHOICE",
}
`;

exports[`botChannelChoice dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "fallback": true,
    "message": "hello",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_CHANNEL_CHOICE",
}
`;

exports[`botFeedback defaults to primary 1`] = `
Object {
  "payload": Object {
    "feedbackType": "primary",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_FEEDBACK",
}
`;

exports[`botFeedback dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "feedbackType": "secondary",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_FEEDBACK",
}
`;

exports[`botFeedbackChannelChoice defaults to false fallback 1`] = `
Object {
  "payload": Object {
    "fallback": false,
    "feedbackRelated": true,
    "message": "world",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_CHANNEL_CHOICE",
}
`;

exports[`botFeedbackChannelChoice dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "fallback": true,
    "feedbackRelated": true,
    "message": "hello",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_CHANNEL_CHOICE",
}
`;

exports[`botFeedbackMessage dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "callback": null,
    "feedbackRelated": true,
    "message": "hello",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_MESSAGE",
}
`;

exports[`botFeedbackRequested dispatches expected payload 1`] = `
Object {
  "type": "widget/answerBot/BOT_FEEDBACK_REQUESTED",
}
`;

exports[`botGreeted dispatches expected payload 1`] = `
Object {
  "payload": true,
  "type": "widget/answerBot/BOT_GREETED",
}
`;

exports[`botInitialFallback dispatches expected payload 1`] = `
Object {
  "payload": true,
  "type": "widget/answerBot/BOT_INITIAL_FALLBACK",
}
`;

exports[`botMessage dispatches expected actions 1`] = `
Array [
  Object {
    "payload": Object {
      "callback": null,
      "message": "hello world",
      "sessionID": 1234,
      "timestamp": 1531267200000,
    },
    "type": "widget/answerBot/BOT_MESSAGE",
  },
]
`;

exports[`botUserMessage dispatches expected payload 1`] = `
Object {
  "payload": Object {
    "feedbackRelated": true,
    "isVisitor": true,
    "message": "hello",
    "timestamp": 1531267200000,
  },
  "type": "widget/answerBot/BOT_MESSAGE",
}
`;
